# agent-forge

./: .gitignore  .mcp.json  CLAUDE.md  README.md  TODO.md
.claude/: settings.json
delta-logs/: M6-handler-wiring.json
docs/: ANALYSIS.md  ARCHITECTURE.md  PENDING-VALIDATION.md  PHASE1-CORE-ENGINE.md  REVIEW-2026-03-12.md  ROADMAP.md  VISION-v2.md  (+2 more)
tools/token-monitor-mcp/: USAGE.md  pyproject.toml
tools/token-monitor-mcp/src/token_monitor_mcp/: cli.py  server.py
tools/token-monitor-mcp/tests/: test_cli.py  test_server.py
tools/workspace-mcp/: .env.sample  Makefile  README.md  domain-profile.yaml  pyproject.toml
tools/workspace-mcp/src/_template/: tools.py
tools/workspace-mcp/src/github/: client.py  tools.py
tools/workspace-mcp/src/github/review/: detector.py  models.py  store.py  tools.py  watcher.py
tools/workspace-mcp/src/gmail/: client.py  tools.py
tools/workspace-mcp/src/gmail/rules/: classifier.py  jira_detector.py  processor.py
tools/workspace-mcp/src/shared/: events.py  hooks.py  logging.py  sanitize.py  server.py
tools/workspace-mcp/src/shared/auth/: setup.py
tools/workspace-mcp/src/shared/batch/: config.py  scheduler.py
tools/workspace-mcp/src/shared/task/: models.py
tools/workspace-mcp/tests/: conftest.py  test_auth_setup.py  test_batch_config.py  test_events.py  test_github_actions.py  test_github_client.py  test_github_monitors.py  test_gmail_client.py  test_gmail_rules.py  test_gmail_tools.py  test_hooks.py  test_integration.py  test_logging.py  test_logging_integration.py  test_review_detector.py  test_review_store.py  test_review_watcher.py  test_sanitize.py  test_task_store.py  test_token_store.py
(+110 files in other folders)
